veecle-os-runtime-macros/tests/ui/storable/unknown_attribute.stderr
error: Unknown field: `foo`. Available values: `crate`, `data_type`
 --> tests/ui/storable/unknown_attribute.rs:2:12
  |
2 | #[storable(foo = "bar")]
  |            ^^^
